# science-ocr

./: README.md  pyproject.toml
src/science_ocr/: engine.py  pdf2image.py  pipeline.py
tests/: test_ocr.py
tests/fixtures/: 573_574BSEA44NBSharpiarubida_300dpi.txt
