[project]
name = "science-ocr"
version = "0.1.0"
description = ""
authors = [
    {name = "Tomás Golomb Durán", email = "tomasgduran@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "surya-ocr (>=0.17.0,<0.18.0)",
    "pymupdf (>=1.26.6,<2.0.0)"
]

[tool.poetry]
packages = [{include = "science_ocr", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
